--- a/index.html
+++ b/index.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Quinoa and Kale Salad Recipe</title>
+  <link href="style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-    <div class="container">
-        <table>
-            <thead>
-                <tr>
-                  <th colspan="2"><h1>Wine Festival Schedule</h1></th>
-                            
-                </tr>
-                <tr>
-                    <th>
-                        <h2>Time</h2>
-                    </th>
-                    <th>
-                      <h2>  Event</h2> 
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="left"> <h3>12:00 PM</h3></td>
-                    <td > <h3>Welcome Reception</h3></td>
-                </tr>
-                <tr>
-                    <td class="left"> <h3>1:00 PM</h3></td>
-                    <td > <h3>Storytelling & Tasting</h3></td>
-                </tr>
-                <tr>
-                    <td class="left"> <h3>2:00 PM</h3></td>
-                    <td > <h3>Wine Luncheon</h3></td>
-                </tr>
-                <tr>
-                    <td class="left"> <h3>3:00 PM</h3></td>
-                    <td > <h3>Aguillar Family Wines</h3></td>
-                </tr>
-                <tr>
-                    <td class="left"> <h3>4:00 PM</h3></td>
-                    <td > <h3>Wine & Cheese Tasting</h3></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+
+  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/salad.jpg" alt="Kale Caeasar Salad"/>
+  <h1>Kale Caesar Quinoa Salad with Roasted Chicken</h1>
+  <p class="description">Kale and quinoa provide a healthy base for roasted chicken topped with a light Caesar sauce.</p>
+
+  <p id="cook-time">Total time: 45 minutes</p>
+
+  <h2>Ingredients</h2>
+  <ul class="ingredients">
+    <li>1/4 cup kale</li>
+    <li>1 cup Quinoa</li>
+    <li>2 tbsp Olive Oil</li>
+    <li>1 chicken breast</li>
+    <li>Caesar Dressing</li>
+  </ul>
+
+  <h2>Preparation</h2>
+  <ol>
+    <li>
+      <p>Prepare quinoa and roast chicken until golden brown and 165 in middle.</p>
+      <p class="time">Time: 40 minutes</p>
+    </li>
+    <li>
+      <p>Toss quinoa, chicken, kale, and Caesar dressing until coated.</p>
+      <p class="time">Time: 4 minutes</p>
+    </li>
+    <li>
+      <p>Add walnuts and olive oil as garnish.</p>
+      <p class="time">Time: 1 minute</p>
+    </li>
+  </ol>
+
+  <p class="citation">Find this recipe and more <a href="http://www.myrecipes.com/recipe/kale-caesar-salad-chicken" target="_blank" class="external-link">here</a>.</p>
+
 </body>
+
 </html>
